--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.9.0",
+    "@next/font": "^14.2.15",
     "@prisma/client": "^6.7.0",
     "@tailwindcss/forms": "^0.5.10",
     "bcrypt": "^5.1.1",
