--- a/package.json
+++ b/package.json
@@ -6,38 +6,29 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:seed": "ts-node --compiler-options '{\"module\":\"CommonJS\"}' prisma/seed-dbt.ts"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.9.0",
-    "@next/font": "^14.2.15",
-    "@prisma/client": "^6.7.0",
-    "@tailwindcss/forms": "^0.5.10",
-    "bcrypt": "^5.1.1",
-    "clsx": "^2.1.1",
-    "daisyui": "^5.0.35",
-    "next": "15.3.2",
-    "next-auth": "^4.24.11",
-    "prisma": "^6.7.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "swr": "^2.3.3",
-    "tailwind-merge": "^3.2.0",
-    "uuid": "^11.1.0",
-    "zod": "^3.24.4",
-    "zustand": "^5.0.4"
+    "@prisma/client": "^5.0.0",
+    "next": "14.0.4",
+    "next-auth": "^4.24.5",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
+    "postcss": "^8.4.32",
+    "prisma": "^5.0.0",
+    "tailwindcss": "^3.4.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
